@@ -64,8 +64,6 @@ class SCOREP_Instrumenter_Thread;
 class SCOREP_Instrumenter_Mpp;
 class SCOREP_Instrumenter_Io;
 
-class SCOREP_Instrumenter_Mutex;
-
 /* ****************************************************************************
    Class SCOREP_Instrumenter
 ******************************************************************************/
@@ -261,8 +259,6 @@ private:
     SCOREP_Instrumenter_Thread* m_thread;
     SCOREP_Instrumenter_Mpp*    m_mpp;
     SCOREP_Instrumenter_Io*     m_io;
-
-    SCOREP_Instrumenter_Mutex* m_mutex;
 
     std::deque<SCOREP_Instrumenter_Adapter*> m_preprocess_adapters;
     std::deque<SCOREP_Instrumenter_Adapter*> m_precompile_adapters;
